@@ -1,0 +1,92 @@
+#!/bin/bash
+#
+# Copyright 2015, 2016 Internet Corporation for Assigned Names and Numbers.
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+# 
+# http://www.apache.org/licenses/LICENSE-2.0
+# 
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+#
+
+#
+# Developed by Sinodun IT (www.sinodun.com)
+#
+
+# 
+# File:   000013_ddl_dnskey_vs_asn
+#
+
+eval $(@LIBEXEC@/conf_read)
+
+DB_NAME=$hhconfig_database_name
+DATA_DIR=$hhconfig_directories_data
+export PGPASSWORD=$hhconfig_database_owner_pass
+
+NEW_DDL_SERIAL=13
+REQUIRED_DDL_SERIAL=$(( $NEW_DDL_SERIAL - 1 ))
+NEW_API_VERSION=10
+REQUIRED_API_VERSION=$(( $NEW_API_VERSION - 1 ))
+
+DSC_SCHEMA="dsc"
+
+usage () {
+    echo
+    echo "Usage: $(basename $0) options"
+    echo
+    echo "Supported options:"
+    echo "  -h Show this help."
+    exit 1
+}
+
+
+while getopts ":h" opt; do
+    case $opt in
+        h  ) usage ;;
+        \? ) usage ;;
+    esac
+done
+
+# Need a write user to update DB
+echo "`date`: $0 COMMENCED"
+a=$(@LIBEXEC@/check_user_perms -w -C $REQUIRED_API_VERSION -s $REQUIRED_DDL_SERIAL)
+if [ $? -ne 0 ] ; then
+  echo $a
+  exit 1
+fi
+eval $a
+export PGPASSWORD=$PGPASSWORD
+
+echo "Starting"
+psql -h $hhconfig_database_host $DB_NAME <<EOF
+BEGIN;
+
+WITH rows AS (
+  INSERT INTO visible_plot (name, display_category, display_name, title) 
+    VALUES ('dnskey_vs_asn','7.Client Subnet Statistics','DNSKEY Queries by ASN','DNSKEY Queries by ASN') 
+    RETURNING id
+), rows2 AS (
+  INSERT INTO dataset (name) VALUES ('qtype_vs_client_subnet')
+    RETURNING id as dataset_id
+)
+INSERT INTO dataset_visible_plot SELECT id, dataset_id FROM rows, rows2;
+
+UPDATE $DSC_SCHEMA.version SET version = $NEW_API_VERSION;
+INSERT INTO $DSC_SCHEMA.internal_version ( serial, script, description, applied ) VALUES ( $NEW_DDL_SERIAL, '$0', 'Added new graphs and datasets for 2.1', now() );
+COMMIT;
+EOF
+
+echo "`date`: $0 COMPLETED"
+
+
+
+
+
+
+
