@@ -131,6 +131,8 @@ echo "Running DDL scripts"
 @LIBEXEC@/DDL_updates/000011_ddl_new_graphs
 # DB schema now contains the new index, therefore only run script to update version
 @LIBEXEC@/DDL_updates/000012_ddl_lower_key_index -s
+# Add a dataset/plot  for dnskey_vs_asn
+@LIBEXEC@/DDL_updates/000013_ddl_dnskey_vs_asn
 ###########################################################
 
 ###################  POPULATE TABLES  #####################
