@@ -14,6 +14,11 @@
 # limitations under the License.
 #
 
+Hedgehog 2.2.0 - 2016-08-31
+-----------------------------
+* Added new dataset and plot dnskey_vs_asn
+
+
 Hedgehog 2.1.1 - 2016-08-16
 -----------------------------
 * Fix issue with database_manage_partitions script where generating tables for
